[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/level.gd" type="Script" id=1]
[ext_resource path="res://sprites/tileset.tres" type="TileSet" id=2]
[ext_resource path="res://music/dynadingo.ogg" type="AudioStream" id=3]

[node name="Level" type="Node2D"]
script = ExtResource( 1 )

[node name="MapManager" type="Node" parent="."]

[node name="Indestructible" type="TileMap" parent="MapManager"]
z_index = -1
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
format = 1
tile_data = PackedInt32Array( 0, 1, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 1, 0, 65536, 1, 0, 65537, 7, 0, 65538, 7, 0, 65539, 7, 0, 65540, 7, 0, 65541, 7, 0, 65542, 7, 0, 65543, 7, 0, 65544, 7, 0, 65545, 7, 0, 65546, 7, 0, 65547, 7, 0, 65548, 7, 0, 65549, 7, 0, 65550, 1, 0, 131072, 1, 0, 131073, 7, 0, 131074, 0, 0, 131075, 7, 0, 131076, 0, 0, 131077, 7, 0, 131078, 0, 0, 131079, 7, 0, 131080, 0, 0, 131081, 7, 0, 131082, 0, 0, 131083, 7, 0, 131084, 0, 0, 131085, 7, 0, 131086, 1, 0, 196608, 1, 0, 196609, 7, 0, 196610, 7, 0, 196611, 7, 0, 196612, 7, 0, 196613, 7, 0, 196614, 7, 0, 196615, 7, 0, 196616, 7, 0, 196617, 7, 0, 196618, 7, 0, 196619, 7, 0, 196620, 7, 0, 196621, 7, 0, 196622, 1, 0, 262144, 1, 0, 262145, 7, 0, 262146, 0, 0, 262147, 7, 0, 262148, 0, 0, 262149, 7, 0, 262150, 0, 0, 262151, 7, 0, 262152, 0, 0, 262153, 7, 0, 262154, 0, 0, 262155, 7, 0, 262156, 0, 0, 262157, 7, 0, 262158, 1, 0, 327680, 1, 0, 327681, 7, 0, 327682, 7, 0, 327683, 7, 0, 327684, 7, 0, 327685, 7, 0, 327686, 7, 0, 327687, 7, 0, 327688, 7, 0, 327689, 7, 0, 327690, 7, 0, 327691, 7, 0, 327692, 7, 0, 327693, 7, 0, 327694, 1, 0, 393216, 1, 0, 393217, 7, 0, 393218, 0, 0, 393219, 7, 0, 393220, 0, 0, 393221, 7, 0, 393222, 0, 0, 393223, 7, 0, 393224, 0, 0, 393225, 7, 0, 393226, 0, 0, 393227, 7, 0, 393228, 0, 0, 393229, 7, 0, 393230, 1, 0, 458752, 1, 0, 458753, 7, 0, 458754, 7, 0, 458755, 7, 0, 458756, 7, 0, 458757, 7, 0, 458758, 7, 0, 458759, 7, 0, 458760, 7, 0, 458761, 7, 0, 458762, 7, 0, 458763, 7, 0, 458764, 7, 0, 458765, 7, 0, 458766, 1, 0, 524288, 1, 0, 524289, 7, 0, 524290, 0, 0, 524291, 7, 0, 524292, 0, 0, 524293, 7, 0, 524294, 0, 0, 524295, 7, 0, 524296, 0, 0, 524297, 7, 0, 524298, 0, 0, 524299, 7, 0, 524300, 0, 0, 524301, 7, 0, 524302, 1, 0, 589824, 1, 0, 589825, 7, 0, 589826, 7, 0, 589827, 7, 0, 589828, 7, 0, 589829, 7, 0, 589830, 7, 0, 589831, 7, 0, 589832, 7, 0, 589833, 7, 0, 589834, 7, 0, 589835, 7, 0, 589836, 7, 0, 589837, 7, 0, 589838, 1, 0, 655360, 1, 0, 655361, 7, 0, 655362, 0, 0, 655363, 7, 0, 655364, 0, 0, 655365, 7, 0, 655366, 0, 0, 655367, 7, 0, 655368, 0, 0, 655369, 7, 0, 655370, 0, 0, 655371, 7, 0, 655372, 0, 0, 655373, 7, 0, 655374, 1, 0, 720896, 1, 0, 720897, 7, 0, 720898, 7, 0, 720899, 7, 0, 720900, 7, 0, 720901, 7, 0, 720902, 7, 0, 720903, 7, 0, 720904, 7, 0, 720905, 7, 0, 720906, 7, 0, 720907, 7, 0, 720908, 7, 0, 720909, 7, 0, 720910, 1, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0 )

[node name="Destructible" type="TileMap" parent="MapManager"]
z_index = -1
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
format = 1
tile_data = PackedInt32Array( 65539, 2, 0, 65540, 2, 0, 65541, 2, 0, 65542, 2, 0, 65543, 4, 0, 65545, 2, 0, 65546, 2, 0, 65547, 2, 0, 131075, 2, 0, 131077, 2, 0, 131079, 2, 0, 131081, 2, 0, 131083, 2, 0, 196609, 2, 0, 196612, 4, 0, 196614, 2, 0, 196616, 2, 0, 196617, 2, 0, 196618, 4, 0, 196619, 2, 0, 196620, 2, 0, 196621, 2, 0, 262145, 2, 0, 262147, 2, 0, 262149, 2, 0, 262151, 2, 0, 262155, 2, 0, 262157, 2, 0, 327681, 2, 0, 327682, 2, 0, 327683, 2, 0, 327684, 2, 0, 327685, 2, 0, 327686, 2, 0, 327687, 4, 0, 327688, 2, 0, 327690, 2, 0, 327692, 2, 0, 327693, 2, 0, 393217, 2, 0, 393221, 2, 0, 393223, 2, 0, 393225, 2, 0, 393227, 2, 0, 393229, 2, 0, 458753, 2, 0, 458755, 2, 0, 458756, 2, 0, 458758, 2, 0, 458759, 2, 0, 458761, 2, 0, 458762, 2, 0, 458763, 4, 0, 458765, 2, 0, 524289, 2, 0, 524291, 2, 0, 524293, 4, 0, 524295, 2, 0, 524297, 2, 0, 524299, 2, 0, 524301, 4, 0, 589825, 4, 0, 589826, 2, 0, 589828, 2, 0, 589829, 2, 0, 589830, 2, 0, 589831, 2, 0, 589832, 2, 0, 589834, 2, 0, 589836, 2, 0, 589837, 2, 0, 655363, 2, 0, 655365, 2, 0, 655367, 2, 0, 655369, 2, 0, 720899, 2, 0, 720901, 2, 0, 720902, 4, 0, 720904, 2, 0, 720905, 2, 0, 720906, 2, 0, 720907, 2, 0 )

[node name="PlayerManager" type="Node" parent="."]

[node name="BombManager" type="Node" parent="."]

[node name="CollectibleManager" type="Node" parent="."]

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
